force-app/main/default/objects/Footfall_Record__c/Footfall_Record__c.object-meta.xml
<CustomObject>
    <description>Footfall data linked to site</description>
    <label>Footfall Record</label>
    <nameField>
        <displayFormat>FF-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Footfall Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>