force-app/main/default/objects/Footfall_Record__c/fields/Daily_Count__c.field-meta.xml
<CustomField>
    <fullName>Daily_Count__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Total observed or estimated footfall count for the day</inlineHelpText>
    <label>Daily Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>