force-app/main/default/objects/Footfall_Record__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Capture method for the footfall data</inlineHelpText>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IoT Sensor</fullName>
            </value>
            <value>
                <fullName>Manual Count</fullName>
            </value>
            <value>
                <fullName>Mobile GPS Aggregate</fullName>
            </value>
            <value>
                <fullName>Experian</fullName>
            </value>
            <value>
                <fullName>Estimated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>