force-app/main/default/objects/Footfall_Record__c/fields/Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Week__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <formula>CASE(
    MOD(Recorded_Date__c - DATE(1900, 1, 7), 7),
    0, &quot;Sunday&quot;,
    1, &quot;Monday&quot;,
    2, &quot;Tuesday&quot;,
    3, &quot;Wednesday&quot;,
    4, &quot;Thursday&quot;,
    5, &quot;Friday&quot;,
    6, &quot;Saturday&quot;,
    &quot;Unknown&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>derived day label for weekend vs weekday analysis</inlineHelpText>
    <label>Day of Week</label>
    <type>Text</type>
</CustomField>