force-app/main/default/objects/Footfall_Record__c/fields/Footfall_Band__c.field-meta.xml
<CustomField>
    <fullName>Footfall_Band__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <formula>IF(
  Daily_Count__c &gt;= 20000, &quot;Very High&quot;,
  IF(
    Daily_Count__c &gt;= 10000, &quot;High&quot;,
    IF(
      Daily_Count__c &gt;= 5000, &quot;Medium&quot;,
      &quot;Low&quot;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Footfall Band</label>
    <type>Text</type>
</CustomField>