force-app/main/default/objects/Footfall_Record__c/fields/Is_Weekend__c.field-meta.xml
<CustomField>
    <fullName>Is_Weekend__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <formula>OR(
    WEEKDAY(Recorded_Date__c) = 1,
    WEEKDAY(Recorded_Date__c) = 7
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Weekend</label>
    <type>Checkbox</type>
</CustomField>