force-app/main/default/objects/Footfall_Record__c/fields/Peak_Hour__c.field-meta.xml
<CustomField>
    <fullName>Peak_Hour__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Hour of day (0–23) when footfall is highest; used for operating hour recommendations</inlineHelpText>
    <label>Peak Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>