force-app/main/default/objects/Footfall_Record__c/fields/Potential_Site__c.field-meta.xml
<CustomField>
    <fullName>Potential_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Links footfall measurement to the candidate site</inlineHelpText>
    <label>Potential Site</label>
    <referenceTo>Potential_Site__c</referenceTo>
    <relationshipLabel>Footfall Records</relationshipLabel>
    <relationshipName>Footfall_Records</relationshipName>
    <type>Lookup</type>
</CustomField>