force-app/main/default/objects/Footfall_Record__c/fields/Recorded_Date__c.field-meta.xml
<CustomField>
    <fullName>Recorded_Date__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Date of footfall observation</inlineHelpText>
    <label>Recorded Date</label>
    <type>Date</type>
</CustomField>