force-app/main/default/objects/Footfall_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Recorded_Date__c</columns>
    <columns>Daily_Count__c</columns>
    <columns>Data_Source__c</columns>
    <columns>Footfall_Band__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>